--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  /*pointer-events: none;*/
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,14 +21,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+
+  display: flex;
+
+
+
+}
+
+.App-body {
+  display: flex;
 }
 
 .App-link {
